# myTinyHttpd

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  client.c  server.c
tmp/: test  test.c
