cmake_minimum_required(VERSION 3.16.3)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
MESSAGE(STATUS "EXECUTABLE_OUTPUT_PATH: " ${EXECUTABLE_OUTPUT_PATH})

ADD_COMPILE_OPTIONS(-W -Wall)
MESSAGE(STATUS "CMAKE_C_FLAGS: " ${CMAKE_C_FLAGS})

SET(SERVER_SRC_LIST server.c)
SET(CLIENT_SRC_LIST client.c)

ADD_EXECUTABLE(server ${SERVER_SRC_LIST})
TARGET_LINK_LIBRARIES(server pthread)

ADD_EXECUTABLE(client ${CLIENT_SRC_LIST})


